--- a/module2/src/main/resources/application.properties
+++ b/module2/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.datasource.url=jdbc:h2:file:./data/module2db
 spring.datasource.username=abhidb
 spring.datasource.password=abhi123
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
